--- a/css/style.css
+++ b/css/style.css
@@ -15,33 +15,20 @@ table td {
 
     padding: 5px;
     text-align: center;
-    border: 1px solid #aaa;
     width: 80px;
     height: 80px;
     font-size: 40px;
 }
 
-.workday:hover .weekend:hover .header {
-    background-color: crimson;
-}
-
-
-
-
 .today {
-    background: lightseagreen;
+    background: #ef6eae;
 }
 
 
-
-
-
-
-
-/* .workday {
+.workday {
     background: rgb(236, 236, 236);
-    background: linear-gradient(0deg, rgb(167, 136, 216) 0%, rgba(129, 5, 240, 1) 100%);
-    opacity: 0.7 ;
+    background: linear-gradient(0deg, rgb(167, 136, 216) 0%, rgba(129, 5, 240) 100%);
+    opacity: 1 ;
     border: none;
 
 }
@@ -57,14 +44,14 @@ table td {
         -4px -4px 6px 0 rgba(116, 125, 136, .5),
         inset -4px -4px 6px 0 rgba(255, 255, 255, .2),
         inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
-    opacity: 0.7;
+    opacity: 1;
 
 }
 
 .weekend {
     background: rgb(236, 236, 236);
     background: linear-gradient(0deg, #84fab0 0%, #8fd3f4 100%);
-    opacity: 0.7 ;
+    opacity: 1 ;
     border: none;
 
 }
@@ -80,6 +67,6 @@ table td {
         -4px -4px 6px 0 rgba(116, 125, 136, .5),
         inset -4px -4px 6px 0 rgba(255, 255, 255, .2),
         inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
-    opacity: 0.7;
+    opacity: 1;
     
-} */
+}
