--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,14 @@
 
 body {
     text-align: center;
+    background-image: url(../img/month<?= rand (1, 24)?>.jpg)
 }
+
 
 table {
     margin: 10px auto;
     border-collapse: collapse;
+    text-shadow: 0.1em 0.1em 0.2em gray;
 }
 
 table td {
@@ -53,7 +56,7 @@ table td {
 
 .weekend {
     background: rgb(236, 236, 236);
-    background: linear-gradient(0deg, #84fab0 0%, #8fd3f4 100%);
+    background: linear-gradient(0deg, rgba(132, 250, 176, 0.7) 0%, rgba(143, 211, 244, 0.7) 100%);
     opacity: 1 ;
     border: none;
 
@@ -72,4 +75,17 @@ table td {
         inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
     opacity: 1;
     
+}
+
+.today{
+    font-weight: bolder;
+    font-style: italic;
+    text-decoration: underline;
+    color: crimson;
+}
+footer{
+    display: block;
+    width: 100%;
+    height: 30vh;
+    background-image: url(/img/month2.jpg);
 }
