--- a/css/styleLoop.css
+++ b/css/styleLoop.css
@@ -1,12 +1,64 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    text-align: center;
 }
 
-body {
+section{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: linear-gradient(45deg,#5433, #5fb3ee);
+    overflow: hidden;
+}
+
+section::before{
+    content: '';
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: linear-gradient(#ffc107,#e91e63);
+    border-radius: 200px;
+    left: 10%;
+    top: 10%;
+    /* transform: translate(-250px, -120px); */
+}
+
+section::after{
+    content: '';
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background: linear-gradient(#2196f3,#31ff38);
+    border-radius: 200px;
+    right: 20%;
+    bottom: 15%;
+    /* transform: translate(250px, 150px); */
+    
+}
+
+.box{
+    position: relative;
+    z-index: 100;
+}
+
+.container{
+    position: relative;
+    background: rgba(255, 255, 255, 0.2);
+    /* background-color: #FFf; */
+    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.2);
+    border: 3px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(20px);
+    min-height: 400px;
+    min-width: 400px;
+    border-radius: 30px;
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
-    background: linear-gradient(45deg,#5433, #5fb3ee ) no-repeat fixed;
+    justify-content: center;
+    align-items: center;
 }
 
 .topic{
@@ -15,6 +67,7 @@ body {
     position: relative;
     font-weight: 900;
     -webkit-box-reflect: below -12px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+    text-align: center;
 }
 
 .topic span{
@@ -42,24 +95,19 @@ body {
     }
 }
 
-
-.content{
-    width: calc(100% / 3);
+.nav span{
+    padding: 10px 50px;
+    margin: 10px 50px;
+    font-size: 40px;
 }
 
-.pic{
-    width: calc(100% / 3);
-}
 
-p>img{
-    width: 100%;
-    height: 100%;
-}
 
 .header{
     display: flex;
-    margin-left: 35px;
+    margin: 10px 150px;
 }
+
 .headerItem{
     margin: 0;
     padding-top: 20px;
